# Teller

./: .gitignore  CONTRIBUTING.md  DEV_GUIDE.md  DOCS.md  LICENSE  PATTERNS.md  README.md  SETUP.md  start-dev.bat  test_parser.js  test_regex.js  test_smart_parser.js  test_wasm.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  unsupported_bank.md
backend/: package-lock.json  package.json  server.js
cpp/: CMakeLists.txt
cpp/src/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h
cpp/src/bindings/: CMakeLists.txt  main.cpp
cpp/src/extractor/: CMakeLists.txt  transaction_extractor.cpp  transaction_extractor.h
cpp/src/pdf_parser/: CMakeLists.txt  pdf_parser.cpp  pdf_parser.h
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/wasm/: bank_analyzer.js  bank_analyzer.wasm
frontend/src/: App.svelte  app.css
frontend/src/lib/: BetaBanner.svelte  CategoryPieChart.svelte  EmptyTransactionsState.svelte  FeedbackButton.svelte  FileUpload.svelte  HomePage.svelte  MLTrainingPanel.svelte  PrivacyPolicy.svelte  SpendingDashboard.svelte  SpendingTimeline.svelte  TermsOfService.svelte  ThemeToggle.svelte  TopMerchantsChart.svelte  TransactionTable.svelte
frontend/src/stores/: themeStore.ts  transactionStore.ts
frontend/src/utils/: analytics.ts  bankTemplates.ts  categorizer.ts  fuzzyMatch.ts  logger.ts  mlCategorizer.ts  textVectorizer.ts  wasmLoader.ts
scripts/: build_wasm.sh  generate_pdf_statements.py  generate_test_statements.py
